See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.40.00

              pamtopfm: Fix wrong determination of machine endianness.

              Fix uninitialized variable in pnm_allocpamrown().

              Rename pamtooctave to pamtooctaveimg.

              Build: don't use 'uint' type.  Solaris 10 apparently doesn't
              have it.

              Build: Add missing <stdlib.h> to ppmrough.c.

07.06.26 BJH  Release 10.39.00

              Add pamtooctave.  Thanks Scott Pakin (scott@pakin.org).

              Add pamundice.

              fitstopnm: add -omaxval.

              pnmremap: add -norand.

              pbmtext: improve error messages about fonts.

              pamtofits: fix -min, -max.

              fitstopnm: fix BITPIX = -32.

              PAM_STRUCT_SIZE: cast pointer to ulong instead of uint.

              pamthreshold: fix totally bogus threshold selection with
              simple thresholding.

              Configure: do test compile for missing Libxml2 and too old
              Libxml2.

              Configure: fix bug detecting presence of libvga with
              Ldconfig.

              Configure: build properly for Mac OSX when user says
              libnetpbm will be in the default search path.

              Build: don't use 'uint' type.  Mac OSX apparently doesn't
              have it.

07.03.30 BJH  Release 10.38.0
    
              Add pamfixtrunc.

              pamtogif: Add -aspect.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamditherbw: Add -atkinson.

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pambackground: recognize mid-row background.
